--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +9,25 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-   <header class="container">
-    <div class="row">
+   <header class="container-fluid sm-6">
+    <div class="row" id="cim">
         <h1>A halál árnyéka</h1>
+    </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <button type="button" class="btn btn-success">            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-1-square-fill" viewBox="0 0 16 16">
+                <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2Zm7.283 4.002V12H7.971V5.338h-.065L6.072 6.656V5.385l1.899-1.383h1.312Z"/>
+              </svg>
+            Success</button>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae pariatur facere recusandae earum nulla, optio est sit sint, temporibus dolor aspernatur, adipisci eveniet accusantium beatae odit! Ab, temporibus architecto. Accusantium?</p>
+        </div>
+        <div class="col-sm-4">
+            <button type="button" class="btn btn-primary">            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-1-square-fill" viewBox="0 0 16 16">
+                <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2Zm7.283 4.002V12H7.971V5.338h-.065L6.072 6.656V5.385l1.899-1.383h1.312Z"/>
+              </svg>
+            Success</button>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta officia sunt, perferendis ducimus perspiciatis qui. Nobis, quia esse. Eaque reprehenderit suscipit quod omnis accusamus aperiam nisi totam similique amet quibusdam!</p>
+        </div>
     </div>
    </header>
 </body>
